k8s/applications/utils/dockur-windows/Namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dockur-windows
  labels:
    pod-security.kubernetes.io/enforce: privileged
