k8s/applications/utils/dockur-windows/Deployment.yaml
# https://hub.docker.com/r/dockurr/windows
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dockur-windows-deployment
  namespace: dockur-windows
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dockur-windows
  template:
    metadata:
      labels:
        app: dockur-windows
    spec:
      # securityContext:
      #   runAsNonRoot: true
      #   runAsUser: 1000
      #   runAsGroup: 1000
      #   fsGroup: 1000
      #   fsGroupChangePolicy: OnRootMismatch
      #   seccompProfile:
      #     type: RuntimeDefault
      resources:
        requests:
          cpu: 500m
          memory: 512Mi
        limits:
          cpu: 1000m
          memory: 1024Mi
      terminationGracePeriodSeconds: 120
      containers:
        - name: windows
          image: dockurr/windows:latest
          securityContext:
            # allowPrivilegeEscalation: false
            # readOnlyRootFilesystem: true
            # capabilities:
            #   add: ["NET_ADMIN"]
            privileged: true
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
          ports:
            - containerPort: 8006
              name: http
              protocol: TCP
            - containerPort: 3389
              name: rdp
              protocol: TCP
            - containerPort: 3389
              name: udp
              protocol: UDP
            - containerPort: 5900
              name: vnc
              protocol: TCP
          volumeMounts:
            - mountPath: /storage
              name: storage
            - mountPath: /dev/kvm
              name: dev-kvm
            - mountPath: /dev/net/tun
              name: dev-tun
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: longhorn-dockur-windows-pvc
        - name: dev-kvm
          hostPath:
            path: /dev/kvm
        - name: dev-tun
          hostPath:
            path: /dev/net/tun
            type: CharDevice
