k8s/applications/utils/dockur-windows/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dockur-windows-service
  namespace: dockur-windows
spec:
  type: ClusterIP
  internalTrafficPolicy: Cluster
  selector:
    app: dockur-windows
  ports:
    - name: http
      port: 8006
      protocol: TCP
      targetPort: 8006
    - name: rdp
      port: 3389
      protocol: TCP
      targetPort: 3389
    - name: udp
      port: 3389
      protocol: UDP
      targetPort: 3389
    - name: vnc
      port: 5900
      protocol: TCP
      targetPort: 5900
