k8s/applications/utils/dockur-windows/HTTPRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dockur-windows-httproute
  namespace: dockur-windows
spec:
  parentRefs:
    - kind: Gateway
      name: default-gateway
      namespace: gateway
      sectionName: https-wc-talmox-hera-home-karlsen-fr
  hostnames:
    - windowsxp.talmox.hera.home.karlsen.fr
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dockur-windows-service
          port: 8006
